<resources>
    <string name="app_name">万字</string>
    <string name="start_name">"视讯会议系统
MeetingBox"</string>
    <string name="login_name">用户名称</string>
    <string name="password">用户密码</string>
    <string name="invitation_code">邀请码</string>
    <string name="gesture_unlock">手势密码</string>
    <string name="keyboard_unlock">字符密码</string>
    <string name="login">登入</string>
    <string name="login_out">退出</string>
    <string name="free_try">免费试玩</string>
    <string name="register">注册</string>
    <string name="ip">商户号</string>
    <string name="records">记录</string>
    <string name="setting">设置</string>
    <string name="suggestion">QQ客服</string>
    <string name="game_rule">游戏规则</string>
    <string name="bet_record">下注记录</string>
    <string name="quota_record">额度记录</string>
    <string name="set_language">语言选择</string>
    <string name="set_sound">声音设置</string>
    <string name="set_stake">自定筹码</string>
    <string name="set_other">其他设置</string>
    <string name="exit_app">退出</string>
    <string name="message">消息</string>
    <string name="select_game">请选择游戏:</string>
    <string name="stake_hint">请选择最常用的五种筹码:</string>
    <string name="menu_cancel"><u>取消</u></string>
    <string name="menu_confirm">确认</string>
    <string name="sound_effect">音效开关</string>
    <string name="music_effect">音乐开关</string>
    <string name="volume">音量</string>
    <string name="video_toggle">视频开关</string>
    <string name="push_toggle">推送开关</string>
    <string name="robot_toggle">托管开关</string>
    <string name="yoplay_enter">确认</string>
    <string name="btn_exit_game">退出游戏</string>
    <string name="retry">重试</string>
    <string name="network_not_available">无网络连接，请检查网络设置。</string>
    <string name="error_code_4_iv">账号不存在</string>
    <string name="password_alert">请输入密码</string>
    <string name="bet_start">已开局，请下注</string>
    <string name="bet_stop">停止下注</string>
    <string name="no_bet_warning">你已经连续3局没下注，连续5局不下注将被踢出</string>
    <string name="bet_all_remain">下注所有余额</string>
    <string name="playing">有人在玩了，请选择空位置吧！</string>
    <string name="login_fail">用户名或密码无效</string>
    <string name="login_already">账号已登录！</string>
    <string name="exit_successfully">退出成功！</string>
    <string name="bet_successful">下注成功</string>
    <string name="bet_fail">下注失败</string>
    <string name="username_not_null">用户名不能为空！</string>
    <string name="password_not_null">密码不能为空！</string>
    <string name="username_existed">用户名已存在！</string>
    <string name="login_succeeded">登录成功</string>
    <string name="register_succeeded">注册成功</string>
    <string name="please_login">请登录！</string>
    <string name="login_fail_jxb">获取机械臂数据失败</string>
    <string name="ip_alert">请输入商户号</string>
    <string name="ip_invalid">商户号无效，请重新输入！</string>
    <string name="no_more_data">没有更多数据！</string>
    <string name="change_channel_resolution">已切换到%1$s</string>
    <string name="error_connect">连接失败</string>
    <string name="disconnect">未连接，请检查您的网络！</string>
    <string name="bet_over_limit">超过限红</string>
    <string name="you_lose">您输:</string>
    <string name="you_win">恭喜！您赢:</string>
    <string name="balance_not_enough">余额不足</string>
    <string name="normal_lock_alert">本局已下注，派彩之后才能离开</string>
    <string name="hot_new">热门/最新</string>
    <string name="live_games">视讯游戏</string>
    <string name="arcade_games">街机游戏</string>
    <string name="card_games">我的钱包</string>
    <string name="deposit_area">存款专区</string>
    <string name="withdraw_area">取款专区</string>
    <string name="security_account">安全账户</string>
    <string name="contact_serve">联系客服</string>
    <string name="total_player">在线人数:</string>
    <string name="all_bet">当天投注量:</string>
    <string name="profit">当天利润:</string>
    <string name="bet_count">当天投注次数:</string>
    <string name="service_web">客服网站</string>
    <string name="deposit">存款</string>
    <string name="withdraw">提现</string>
    <string name="recycle">回收</string>
    <string name="ba_game">百家乐</string>
    <string name="hj_game">皇家国际</string>
    <string name="dt_game">龙虎</string>
    <string name="single_pick_game">单挑</string>
    <string name="link_game">自选多台</string>
    <string name="rou_game">轮盘</string>
    <string name="shb_game">骰宝</string>
    <string name="fish_hunter">捕鱼达人</string>
    <string name="fruit_slot">水果老虎机</string>
    <string name="high_roller">大豪客</string>
    <string name="holy_day">澳门五路</string>
    <string name="macao">澳门五路.</string>
    <string name="all_game">全部游戏</string>
    <string name="level">等级</string>
    <string name="total_stake">总有效投注:</string>
    <string name="currency">玩家币种:</string>
    <string name="today_stake">今日有效下注:</string>
    <string name="credits">在线积分:</string>
    <string name="online_duration">在线时长:</string>
    <string name="stake_limit">下注限红:</string>
    <string name="total_table">(总台数：%1$d台)</string>
    <string name="good_road_sorting">好路排序</string>
    <string name="good_road_switch_off">关</string>
    <string name="good_road_switch_on">开</string>
    <string name="players">人数:</string>
    <string name="banker">庄</string>
    <string name="player">闲</string>
    <string name="tie">和</string>
    <string name="pair">对</string>
    <string name="loading">加载中</string>
    <string name="shuffling">洗牌中</string>
    <string name="closed">关闭</string>
    <string name="clearing">结算中</string>
    <string name="start_game">开始游戏</string>
    <string name="table_limits">桌台限红</string>
    <string name="game_code">局号</string>
    <string name="game_room">房间:</string>
    <string name="vip">会员:</string>
    <string name="no_commission">免佣</string>
    <string name="no_commission_off">非免佣</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="repeat">重复</string>
    <string name="robot">未托管</string>
    <string name="dragon_bonus">龙宝</string>
    <string name="play_type_player_dragon_bonus">闲龙宝</string>
    <string name="play_type_player_pair">闲对</string>
    <string name="play_type_banker_pair">庄对</string>
    <string name="play_type_banker_dragon_bonus">庄龙宝</string>
    <string name="play_type_player">闲</string>
    <string name="play_type_dt_tie">和</string>
    <string name="play_type_banker">庄</string>
    <string name="play_type_big">大</string>
    <string name="play_type_small">小</string>
    <string name="player_dragon_bonus_colon">闲龙宝:</string>
    <string name="player_pair_colon">闲对:</string>
    <string name="banker_pair_colon">庄对:</string>
    <string name="banker_dragon_bonus_colon">庄龙宝:</string>
    <string name="player_colon">闲:</string>
    <string name="dt_tie_colon">和:</string>
    <string name="banker_colon">庄:</string>
    <string name="player_banker_colon">庄闲:</string>
    <string name="pair_colon">对子:</string>
    <string name="big_small_colon">大小:</string>
    <string name="bank_play_limit_colon">庄闲限红:</string>
    <string name="tie_limit_colon">和限红:</string>
    <string name="pair_limit_colon">对子限红:</string>
    <string name="big_small_limit_colon">大小限红:</string>
    <string name="dragon_tiger_colon">龙虎:</string>
    <string name="dragon_tiger_limit_colon">龙虎限红:</string>
    <string name="versus_colon">单挑:</string>
    <string name="versus_limit_colon">单挑限红:</string>
    <string name="in_game_total">总数</string>
    <string name="in_game_banker">庄</string>
    <string name="in_game_player">闲</string>
    <string name="in_game_tie">和</string>
    <string name="in_game_banker_pair">庄对</string>
    <string name="in_game_player_pair">闲对</string>
    <string name="ask_road_bank">庄问路</string>
    <string name="ask_road_player">闲问路</string>
    <string name="full_road">全路</string>
    <string name="half_road">半路</string>
    <string name="db_1_1">1赔1</string>
    <string name="db_1_10">1赔10</string>
    <string name="db_1_2">1赔2</string>
    <string name="db_1_3">1赔3</string>
    <string name="db_1_30">1赔30</string>
    <string name="db_1_5">1赔5</string>
    <string name="db_4_point">赢4点</string>
    <string name="db_5_point">赢5点</string>
    <string name="db_6_point">赢6点</string>
    <string name="db_7_point">赢7点</string>
    <string name="db_8_point">赢8点</string>
    <string name="db_9_point">赢9点</string>
    <string name="db_banker_dragon_bonus">庄龙宝</string>
    <string name="db_banker_hand">庄家牌</string>
    <string name="db_banker_pay_table">庄家以非例牌：</string>
    <string name="db_banker_payout">庄龙宝派彩</string>
    <string name="db_bets_refunded">退回本金</string>
    <string name="db_natural">例牌定义：</string>
    <string name="db_natural_msg">头两张牌的点数总和为8或9点。</string>
    <string name="db_natural_tie">例牌和局</string>
    <string name="db_natural_winner">以例牌胜出</string>
    <string name="db_non_natural">非例牌定义：</string>
    <string name="db_non_natural_msg">头两张牌的点数总和并非8或9点。所有三张牌的情况即属非例牌</string>
    <string name="db_odds">赔率</string>
    <string name="db_player_dragon_bonus">闲龙宝</string>
    <string name="db_player_hand">闲家牌</string>
    <string name="db_player_pay_table">闲家以非例牌：</string>
    <string name="db_player_payout">闲龙宝派彩</string>
    <string name="no_commission_msg">庄6点赢赔0.5</string>
    <string name="video_selection">视频选项</string>
    <string name="video_close">关闭视频</string>
    <string name="video_hd">高清</string>
    <string name="video_ld">标清</string>
    <string name="switch_line">切换线路</string>
    <string name="telecom_net">电信网络</string>
    <string name="mobile_net">移动网络</string>
    <string name="lan_net">局域网</string>
    <string name="dragon_colon">龙:</string>
    <string name="tiger_colon">虎:</string>
    <string name="dragon">龙</string>
    <string name="tiger">虎</string>
    <string name="ask_road_dragon">龙问路</string>
    <string name="ask_road_tiger">虎问路</string>
    <string name="dragon_color">1:1 龙</string>
    <string name="tiger_color">1:1 虎</string>
    <string name="tie_color">1:8 和</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="last_week">一星期內</string>
    <string name="bill_no">订单号</string>
    <string name="bet_time">下注时间(美东)</string>
    <string name="game_type">玩法</string>
    <string name="bet">下注</string>
    <string name="prize">派彩</string>
    <string name="yoplay_no_records">没有记录</string>
    <string name="play_type_pb">百家乐</string>
    <string name="play_type_bb">庄(百家乐)</string>
    <string name="play_type_pdbb">闲龙宝(百家乐)</string>
    <string name="play_type_bdbb">庄龙宝(百家乐)</string>
    <string name="play_type_dd">龙虎</string>
    <string name="play_type_td">虎(龙虎)</string>
    <string name="transaction_no">交易单号</string>
    <string name="operate_time">操作时间(美东)</string>
    <string name="record_type">类别</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>
    <string name="after_transaction">交易后额度</string>
    <string name="liquidate">清算</string>
    <string name="recharge">充值</string>
    <string name="cash_back">返金</string>
    <string name="title">标题</string>
    <string name="content">內容</string>
    <string name="sender">发送者</string>
    <string name="send_time">发送时间</string>
    <string name="operate">操作</string>
    <string name="delete">删除</string>
    <string name="look">查看</string>
    <string name="main_road">大路</string>
    <string name="bead_road">珠盘路</string>
    <string name="all_record">下路</string>
    <string name="main_road_line">大路</string>
    <string name="bead_road_line">珠路</string>
    <string name="all_record_line">下路</string>
    <string name="big_eye_road">大眼路</string>
    <string name="small_road">小路</string>
    <string name="cockroach_road">曱甴路</string>
    <string name="manual">说明</string>
    <string name="game_rec">路单</string>
    <string name="change_dealer">换台</string>
    <string name="same_bet">续押</string>
    <string name="player_no">机台号:</string>
    <string name="rounds">场次:</string>
    <string name="uid">UID:</string>
    <string name="balance">余额</string>
    <string name="win">赢分</string>
    <string name="st_bet">押注</string>
    <string name="time">时间</string>
    <string name="pb_limited">庄闲限红：</string>
</resources>