<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/unit1">

    <TextView
        android:id="@+id/tv_all"
        android:layout_width="@dimen/unit115"
        android:layout_height="@dimen/unit35"
        android:background="@drawable/select_item_record_date"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/all_game"
        android:textColor="@color/mainGoldenUnderTine"
        android:textSize="@dimen/font16" />

    <TextView
        android:id="@+id/tv_bac"
        android:layout_width="@dimen/unit115"
        android:layout_height="@dimen/unit35"
        android:background="@drawable/select_item_record_date"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/ba_game"
        android:textColor="@color/mainGoldenUnderTine"
        android:textSize="@dimen/font16" />

    <TextView
        android:id="@+id/tv_dt"
        android:layout_width="@dimen/unit115"
        android:layout_height="@dimen/unit35"
        android:background="@drawable/select_item_record_date"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/dt_game"
        android:textColor="@color/mainGoldenUnderTine"
        android:textSize="@dimen/font16" />

    <TextView
        android:id="@+id/tv_duel"
        android:layout_width="@dimen/unit115"
        android:layout_height="@dimen/unit35"
        android:background="@drawable/select_item_record_date"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/single_pick_game"
        android:textColor="@color/mainGoldenUnderTine"
        android:textSize="@dimen/font16" />
</LinearLayout>