<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit50"
        android:background="@drawable/top_bar"
        android:paddingLeft="@dimen/unit10"
        android:paddingRight="@dimen/unit10">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/unit20"
            android:layout_height="@dimen/unit40"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/message"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font18" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit35"
        android:background="#453C35"
        android:weightSum="19">

        <TextView
            android:id="@+id/tv_bill_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_bet_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/content"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_game_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/sender"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_play_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/send_time"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />
        <!--<RelativeLayout-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="3">-->
            <!---->
        <!--</RelativeLayout>-->
        <TextView
            android:id="@+id/tv_operate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/operate"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />
        <include layout="@layout/include_vertical_line_golden" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <include layout="@layout/include_comm_recycle_view" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/yoplay_no_records"
        android:textColor="@color/mainFontGolden"
        android:visibility="visible" />
</LinearLayout>