<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/unit1">

    <TextView
        android:id="@+id/tv_today"
        android:layout_width="@dimen/unit115"
        android:layout_height="@dimen/unit35"
        android:background="@drawable/select_item_record_date"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/today"
        android:textColor="@color/mainGoldenUnderTine"
        android:textSize="@dimen/font16" />

    <TextView
        android:id="@+id/tv_yesterday"
        android:layout_width="@dimen/unit115"
        android:layout_height="@dimen/unit35"
        android:background="@drawable/select_item_record_date"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/yesterday"
        android:textColor="@color/mainGoldenUnderTine"
        android:textSize="@dimen/font16" />

    <TextView
        android:id="@+id/tv_last_week"
        android:layout_width="@dimen/unit115"
        android:layout_height="@dimen/unit35"
        android:background="@drawable/select_item_record_date"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/last_week"
        android:textColor="@color/mainGoldenUnderTine"
        android:textSize="@dimen/font16" />
</LinearLayout>