<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit50"
        android:background="@drawable/top_bar"
        android:paddingLeft="@dimen/unit10"
        android:paddingRight="@dimen/unit10">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/unit20"
            android:layout_height="@dimen/unit40"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/unit5"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/bet_record"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font18" />

        <RelativeLayout
            android:id="@+id/rl_select_game"
            android:layout_width="@dimen/unit130"
            android:layout_height="@dimen/unit35"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/rl_select_date"
            android:background="@drawable/select_record_date"
            android:onClick="showLeftPop"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_select_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/all_game"
                android:textColor="@color/mainGoldenUnderTine"
                android:textSize="@dimen/font16" />

            <ImageView
                android:id="@+id/iv_select_game"
                android:layout_width="@dimen/unit15"
                android:layout_height="@dimen/unit35"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/unit10"
                android:scaleType="fitCenter"
                android:src="@drawable/ac_spinner_down_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_select_date"
            android:layout_width="@dimen/unit130"
            android:layout_height="@dimen/unit35"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/select_record_date"
            android:onClick="showLeftPop"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/today"
                android:textColor="@color/mainGoldenUnderTine"
                android:textSize="@dimen/font16" />

            <ImageView
                android:id="@+id/iv_select_date"
                android:layout_width="@dimen/unit15"
                android:layout_height="@dimen/unit35"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/unit10"
                android:scaleType="fitCenter"
                android:src="@drawable/ac_spinner_down_arrow" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit35"
        android:background="#453C35"
        android:weightSum="20">

        <TextView
            android:id="@+id/tv_bill_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:gravity="center"
            android:text="@string/bill_no"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_bet_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.7"
            android:gravity="center"
            android:text="@string/bet_time"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_game_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/bet_record"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_play_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/game_type"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_total_bets"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/bet"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

        <include layout="@layout/include_vertical_line_golden" />

        <TextView
            android:id="@+id/tv_dividend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/prize"
            android:textColor="@color/mainFontGolden"
            android:textSize="@dimen/font10" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone">

        <include layout="@layout/include_comm_recycle_view" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/yoplay_no_records"
        android:textColor="@color/mainFontGolden"
        android:visibility="visible" />
</LinearLayout>